--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/AndroidManifest.xml
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.assignment2_ponhvathvann_1502538">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,11 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Exercise5"></activity>
+        <activity android:name=".Exercise5" />
         <activity android:name=".Exercise4" />
         <activity android:name=".Exercise3" />
         <activity android:name=".Exercise2" />
-        <activity android:name=".Exercise1" />
+        <activity android:name=".VolleyRequestExercise" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
