--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/build.gradle
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
