--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/AndroidManifest.xml
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity android:name=".Exercise5" />
         <activity android:name=".Exercise4" />
         <activity android:name=".Exercise3" />
-        <activity android:name=".Exercise2" />
+        <activity android:name=".FusedLocationServiceExercise" />
         <activity android:name=".VolleyRequestExercise" />
         <activity android:name=".MainActivity">
             <intent-filter>
