--- a/Assignment2-MobileApp-By-PonhvathVann-1502538/app/build.gradle
+++ b/Assignment2-MobileApp-By-PonhvathVann-1502538/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
